# Hermes-Argus

./: .gitignore  AGENTS.md  CURRENT-STATE.md  CURRENT_STATE.md  README.md  docker-compose.yml  factory.json
agents/: README.md
cognee-server/: Dockerfile  entrypoint.sh  main.py  mcp_wrapper.py  postgres_mcp.py  requirements.txt  slack_mcp.py  test_adapter.py  test_cognee.py  test_cognee_client.py  vision_mcp.py
config/: hermes.yaml
config/cron/: jobs.json
config/profiles/: ar_watcher.md  ar_watcher.yaml  argus.md  outreach.md  (+3 more)
contracts/: README.md
deploy/: ONBOARDING.md  apply_preset.py  hindsight-start.ps1  provision.sh  register-hindsight-task.ps1  register-watchdog.ps1  upgrade-hermes.ps1  watchdog.ps1
docs/: PHASE_0_RUNBOOK.md  PHASE_1_RUNBOOK.md  PHASE_2_RUNBOOK.md  PHASE_3_RUNBOOK.md  PHASE_4_RUNBOOK.md  PHASE_5_RUNBOOK.md  PHASE_6_RUNBOOK.md  POSTGRES_WRITE_ACCESS.md  REBASE_SPEC.md
google-tools/: .gitignore  oauth_setup.py  pyproject.toml
google-tools/google_tools/: __init__.py  auth.py  calendar.py  gmail.py  server.py  tasks.py
google-tools/google_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
google-tools/google_tools/__tests__/: test_auth.py  test_calendar.py  test_gmail.py  test_server.py  test_tasks.py
schema/: business.sql
scripts/: backup-to-d.ps1  register-backup-task.ps1  replay_slack_to_cognee.py  switch-llm.ps1  sync-skills-to-hermes.sh
templates/: collection_letters.md
tests/: test_cron_business_logic.py  test_data_integrity.py  test_deployment.py  test_e2e_phase0.py  test_integration.py  test_profile_scoping.py
(+46 files in other folders)
